Added functioning links to project slides

--- a/work.html
+++ b/work.html
@@ -32,8 +32,13 @@
     <div class="container">
       <a href="/" class="temp-link">Home</a>
       <a href="/about.html" class="temp-link">About Me</a>
-      <h1 class="text-center">My Work</h1>
-      <h3 class="text-center p-2 mt-3 mb-3">Check out my projects</h3>
+      <h1 class="text-center"><i class="fa-regular fa-file"></i> My Work</h1>
+      <h4 class="text-center p-2 mt-3 mb-3">Check out my projects</h4>
+      <div>
+        <div class="text-center mb-5">
+          <i class="fa-solid fa-chevron-down down-icon"></i>
+        </div>
+      </div>
       <div class="my-work">
         <div class="row mb-4">
           <div class="col-lg-4">
@@ -46,25 +51,37 @@
               <div class="project-description">
                 <div>
                   <h2>Weather Project</h2>
-                  <p class="mb-5">
+                  <p class="mb-4">
                     My first interactive application, I added GitHub, hosting
                     and API integration to my developer toolbox. This app
                     employs ES6, integrating a search engine, functions to
                     extract data from the API and string interpolation to
                     deliver a live, five day weather forecast.
                     <br />
-                    <br />
-                    Click to check the weather in your area.
                   </p>
                 </div>
                 <div>
-                  <a
-                    href="https://weather-app-ljf.netlify.app/"
-                    target="_blank"
-                    class="project-link"
-                    >Weather Forecast</a
-                  >
-                  <br />
+                  <div class="d-flex slide-links">
+                    <a
+                      href="https://weather-app-ljf.netlify.app/"
+                      target="_blank"
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="slide-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/weather-forecast-app"
+                      target="_blank"
+                      title="GitHub Link"
+                    >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="slide-logos"
+                    /></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -79,25 +96,37 @@
               <div class="project-description">
                 <div>
                   <h2>AI Poem Generator</h2>
-                  <p class="mb-5">
+                  <p class="mb-4">
                     This project gave me an introduction to AI prompt
                     engineering. The mission was to build an interactive text
                     generator using Axios and the SheCodes AI API. Including
                     animations utilising JS plugin and CSS @keyframes rule, this
                     app was a fun build.
                     <br />
-                    <br />
-                    Click to try it out.
                   </p>
                 </div>
                 <div>
-                  <a
-                    href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
-                    target="_blank"
-                    class="project-link"
-                    >AI poem for you</a
-                  >
-                  <br />
+                  <div class="d-flex slide-links">
+                    <a
+                      href="https://poem-generator-ljf.netlify.app/"
+                      target="_blank"
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="slide-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/poem-generator"
+                      target="_blank"
+                      title="GitHub Link"
+                    >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="slide-logos"
+                    /></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -111,23 +140,26 @@
               />
               <div class="project-description">
                 <h2>Pole Dance Project</h2>
-                <p class="mb-5">
+                <p class="mb-4">
                   Using developer tool VS Code, I built a HTML landing page
                   featuring CSS grids, transform properties and a linear
                   gradient. JavaScript class manipulation allowed me to create a
                   light/dark theme option on the page. Click image for dark
                   theme.
                   <br />
-                  <br />
-                  Click to view the page.
                 </p>
                 <div>
-                  <a
-                    href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
-                    target="_blank"
-                    class="project-link"
-                    >passion project</a
-                  ><br />
+                  <div class="d-flex slide-links">
+                    <a
+                      href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*19d9rv4*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                      target="_blank"
+                      title="Launch SheCodes Project"
+                      ><img
+                        src="/logos/shecodes-logo-full.png"
+                        alt="Netlify Project Link"
+                        class="slide-logos shecodes-logo"
+                    /></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -144,25 +176,37 @@
               <div class="project-description">
                 <div>
                   <h2>World Clock</h2>
-                  <p class="mb-5">
+                  <p class="mb-4">
                     !Dummy text. My first interactive application, I added
                     GitHub, hosting and API integration to my developer toolbox.
                     This app employs ES6, integrating a search engine, functions
                     to extract data from the API and string interpolation to
                     deliver a live, five day weather forecast.
                     <br />
-                    <br />
-                    Click to check the weather in your area.
                   </p>
                 </div>
                 <div>
-                  <a
-                    href="https://weather-app-ljf.netlify.app/"
-                    target="_blank"
-                    class="project-link"
-                    >World Clock</a
-                  >
-                  <br />
+                  <div class="d-flex slide-links">
+                    <a
+                      href="https://worldclock-lj.netlify.app/"
+                      target="_blank"
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="slide-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/world-clock"
+                      target="_blank"
+                      title="GitHub Link"
+                    >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="slide-logos"
+                    /></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -170,31 +214,33 @@
           <div class="col-lg-4">
             <div class="project-slides">
               <img
-                src="/images/dummy-slide.png"
+                src="/images/ai-joke-generator.png"
                 class="project-image img-fluid"
                 alt="LJ Fryer Weather App"
               />
               <div class="project-description">
                 <div>
                   <h2>AI Joke Generator</h2>
-                  <p class="mb-5">
+                  <p class="mb-3">
                     !Dummy text. This project gave me an introduction to AI
                     prompt engineering. The mission was to build an interactive
                     text generator using Axios and the SheCodes AI API.
                     Including animations utilising JS plugin and CSS @keyframes
                     rule, this app was a fun build.
                     <br />
-                    <br />
-                    Click to try it out.
                   </p>
                 </div>
                 <div>
                   <a
-                    href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                    href="https://codesandbox.io/p/sandbox/joke-generator-challenge-forked-myf4tq?file=%2Fsrc%2Fstyles.css%3A30%2C28&workspaceId=eec32aa4-2965-4330-89d8-97489a9961f9"
                     target="_blank"
-                    class="project-link"
-                    >AI Joke for you</a
-                  >
+                    title="CodeSandbox Project Link"
+                    ><img
+                      src="/logos/codeSandbox-square-logo.svg"
+                      alt="CodeSandbox Project Link"
+                      class="sandbox-logo"
+                  /></a>
+
                   <br />
                 </div>
               </div>
@@ -209,23 +255,27 @@
               />
               <div class="project-description">
                 <h2>Lucky Dog Project</h2>
-                <p class="mb-5">
+                <p class="mb-4">
                   !Dummy text. Using developer tool VS Code, I built a HTML
                   landing page featuring CSS grids, transform properties and a
                   linear gradient. JavaScript class manipulation allowed me to
                   create a light/dark theme option on the page. Click image for
                   dark theme.
                   <br />
-                  <br />
-                  Click to view the page.
                 </p>
                 <div>
                   <a
-                    href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                    href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/002/247/774/original/W3_Project_1_SheCodes.html?1717937790"
                     target="_blank"
-                    class="project-link"
-                    >Lucky boi</a
-                  ><br />
+                    title="Launch SheCodes Project"
+                  >
+                    <img
+                      src="/logos/shecodes-logo-full.png"
+                      alt="SheCodes Project Link"
+                      class="slide-logos"
+                    />
+                  </a>
+                  <br />
                 </div>
               </div>
             </div>
