Cleaned up html structure on index and work

--- a/work.html
+++ b/work.html
@@ -48,40 +48,37 @@
                 class="project-image img-fluid"
                 alt="LJ Fryer Weather App"
               />
-              <div class="project-description">
-                <div>
-                  <h2>Weather Project</h2>
-                  <p class="mb-4">
-                    My first interactive application, I added GitHub, hosting
-                    and API integration to my developer toolbox. This app
-                    employs ES6, integrating a search engine, functions to
-                    extract data from the API and string interpolation to
-                    deliver a live, five day weather forecast.
-                    <br />
-                  </p>
-                </div>
-                <div>
-                  <div class="d-flex slide-links">
-                    <a
-                      href="https://weather-app-ljf.netlify.app/"
-                      target="_blank"
-                      title="Launch Netlify Site"
-                      ><img
-                        src="/logos/netlify-logo-lightmode.png"
-                        alt="Netlify Project Link"
-                        class="slide-logos"
-                    /></a>
-                    <a
-                      href="https://github.com/LJ-Fryer/weather-forecast-app"
-                      target="_blank"
-                      title="GitHub Link"
-                    >
-                      <img
-                        src="/logos/git-icon.png"
-                        alt="GitHub Project Link"
-                        class="slide-logos"
-                    /></a>
-                  </div>
+              <div class="project-description d-flex flex-column">
+                <h2>Weather Project</h2>
+                <p class="mb-4">
+                  My first interactive application, I added GitHub, hosting and
+                  API integration to my developer toolbox. This app employs ES6,
+                  integrating a search engine, functions to extract data from
+                  the API and string interpolation to deliver a live, five day
+                  weather forecast.
+                  <br />
+                </p>
+
+                <div class="d-flex slide-links">
+                  <a
+                    href="https://weather-app-ljf.netlify.app/"
+                    target="_blank"
+                    title="Launch Netlify Site"
+                    ><img
+                      src="/logos/netlify-logo-lightmode.png"
+                      alt="Netlify Project Link"
+                      class="slide-logos"
+                  /></a>
+                  <a
+                    href="https://github.com/LJ-Fryer/weather-forecast-app"
+                    target="_blank"
+                    title="GitHub Link"
+                  >
+                    <img
+                      src="/logos/git-icon.png"
+                      alt="GitHub Project Link"
+                      class="slide-logos"
+                  /></a>
                 </div>
               </div>
             </div>
@@ -93,40 +90,35 @@
                 class="project-image img-fluid"
                 alt="LJ Fryer Weather App"
               />
-              <div class="project-description">
-                <div>
-                  <h2>AI Poem Generator</h2>
-                  <p class="mb-4">
-                    This project gave me an introduction to AI prompt
-                    engineering. The mission was to build an interactive text
-                    generator using Axios and the SheCodes AI API. Including
-                    animations utilising JS plugin and CSS @keyframes rule, this
-                    app was a fun build.
-                    <br />
-                  </p>
-                </div>
-                <div>
-                  <div class="d-flex slide-links">
-                    <a
-                      href="https://poem-generator-ljf.netlify.app/"
-                      target="_blank"
-                      title="Launch Netlify Site"
-                      ><img
-                        src="/logos/netlify-logo-lightmode.png"
-                        alt="Netlify Project Link"
-                        class="slide-logos"
-                    /></a>
-                    <a
-                      href="https://github.com/LJ-Fryer/poem-generator"
-                      target="_blank"
-                      title="GitHub Link"
-                    >
-                      <img
-                        src="/logos/git-icon.png"
-                        alt="GitHub Project Link"
-                        class="slide-logos"
-                    /></a>
-                  </div>
+              <div class="project-description d-flex flex-column">
+                <h2>AI Poem Generator</h2>
+                <p class="mb-4">
+                  This project gave me an introduction to AI prompt engineering.
+                  The mission was to build an interactive text generator using
+                  Axios and the SheCodes AI API. Including animations utilising
+                  JS plugin and CSS @keyframes rule, this app was a fun build.
+                  <br />
+                </p>
+                <div class="d-flex slide-links">
+                  <a
+                    href="https://poem-generator-ljf.netlify.app/"
+                    target="_blank"
+                    title="Launch Netlify Site"
+                    ><img
+                      src="/logos/netlify-logo-lightmode.png"
+                      alt="Netlify Project Link"
+                      class="slide-logos"
+                  /></a>
+                  <a
+                    href="https://github.com/LJ-Fryer/poem-generator"
+                    target="_blank"
+                    title="GitHub Link"
+                  >
+                    <img
+                      src="/logos/git-icon.png"
+                      alt="GitHub Project Link"
+                      class="slide-logos"
+                  /></a>
                 </div>
               </div>
             </div>
@@ -138,7 +130,7 @@
                 class="project-image img-fluid"
                 alt="Pole dance project"
               />
-              <div class="project-description">
+              <div class="project-description d-flex flex-column">
                 <h2>Pole Dance Project</h2>
                 <p class="mb-4">
                   Using developer tool VS Code, I built a HTML landing page
@@ -148,18 +140,16 @@
                   theme.
                   <br />
                 </p>
-                <div>
-                  <div class="d-flex slide-links">
-                    <a
-                      href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*19d9rv4*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
-                      target="_blank"
-                      title="Launch SheCodes Project"
-                      ><img
-                        src="/logos/shecodes-logo-full.png"
-                        alt="Netlify Project Link"
-                        class="slide-logos shecodes-logo"
-                    /></a>
-                  </div>
+                <div class="d-flex slide-links">
+                  <a
+                    href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*19d9rv4*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                    target="_blank"
+                    title="Launch SheCodes Project"
+                    ><img
+                      src="/logos/shecodes-logo-full.png"
+                      alt="Netlify Project Link"
+                      class="slide-logos shecodes-logo"
+                  /></a>
                 </div>
               </div>
             </div>
@@ -173,40 +163,36 @@
                 class="project-image img-fluid"
                 alt="LJ Fryer World Clock App"
               />
-              <div class="project-description">
-                <div>
-                  <h2>World Clock</h2>
-                  <p class="mb-4">
-                    !Dummy text. My first interactive application, I added
-                    GitHub, hosting and API integration to my developer toolbox.
-                    This app employs ES6, integrating a search engine, functions
-                    to extract data from the API and string interpolation to
-                    deliver a live, five day weather forecast.
-                    <br />
-                  </p>
-                </div>
-                <div>
-                  <div class="d-flex slide-links">
-                    <a
-                      href="https://worldclock-lj.netlify.app/"
-                      target="_blank"
-                      title="Launch Netlify Site"
-                      ><img
-                        src="/logos/netlify-logo-lightmode.png"
-                        alt="Netlify Project Link"
-                        class="slide-logos"
-                    /></a>
-                    <a
-                      href="https://github.com/LJ-Fryer/world-clock"
-                      target="_blank"
-                      title="GitHub Link"
-                    >
-                      <img
-                        src="/logos/git-icon.png"
-                        alt="GitHub Project Link"
-                        class="slide-logos"
-                    /></a>
-                  </div>
+              <div class="project-description d-flex flex-column">
+                <h2>World Clock Project</h2>
+                <p class="mb-4">
+                  !Dummy text. My first interactive application, I added GitHub,
+                  hosting and API integration to my developer toolbox. This app
+                  employs ES6, integrating a search engine, functions to extract
+                  data from the API and string interpolation to deliver a live,
+                  five day weather forecast.
+                  <br />
+                </p>
+                <div class="d-flex slide-links">
+                  <a
+                    href="https://worldclock-lj.netlify.app/"
+                    target="_blank"
+                    title="Launch Netlify Site"
+                    ><img
+                      src="/logos/netlify-logo-lightmode.png"
+                      alt="Netlify Project Link"
+                      class="slide-logos"
+                  /></a>
+                  <a
+                    href="https://github.com/LJ-Fryer/world-clock"
+                    target="_blank"
+                    title="GitHub Link"
+                  >
+                    <img
+                      src="/logos/git-icon.png"
+                      alt="GitHub Project Link"
+                      class="slide-logos"
+                  /></a>
                 </div>
               </div>
             </div>
@@ -218,19 +204,17 @@
                 class="project-image img-fluid"
                 alt="LJ Fryer Weather App"
               />
-              <div class="project-description">
-                <div>
-                  <h2>AI Joke Generator</h2>
-                  <p class="mb-3">
-                    !Dummy text. This project gave me an introduction to AI
-                    prompt engineering. The mission was to build an interactive
-                    text generator using Axios and the SheCodes AI API.
-                    Including animations utilising JS plugin and CSS @keyframes
-                    rule, this app was a fun build.
-                    <br />
-                  </p>
-                </div>
-                <div>
+              <div class="project-description d-flex flex-column">
+                <h2>AI Joke Generator</h2>
+                <p class="mb-3">
+                  !Dummy text. This project gave me an introduction to AI prompt
+                  engineering. The mission was to build an interactive text
+                  generator using Axios and the SheCodes AI API. Including
+                  animations utilising JS plugin and CSS @keyframes rule, this
+                  app was a fun build.
+                  <br />
+                </p>
+                <div class="d-flex slide-links">
                   <a
                     href="https://codesandbox.io/p/sandbox/joke-generator-challenge-forked-myf4tq?file=%2Fsrc%2Fstyles.css%3A30%2C28&workspaceId=eec32aa4-2965-4330-89d8-97489a9961f9"
                     target="_blank"
@@ -240,7 +224,6 @@
                       alt="CodeSandbox Project Link"
                       class="sandbox-logo"
                   /></a>
-
                   <br />
                 </div>
               </div>
@@ -253,7 +236,7 @@
                 class="project-image img-fluid"
                 alt="Pole dance project"
               />
-              <div class="project-description">
+              <div class="project-description d-flex flex-column">
                 <h2>Lucky Dog Project</h2>
                 <p class="mb-4">
                   !Dummy text. Using developer tool VS Code, I built a HTML
