--- a/index.html
+++ b/index.html
@@ -66,18 +66,16 @@
                 class="project-image img-fluid"
                 alt="LJ Fryer Weather App"
               />
-              <div class="project-description">
-                <div>
-                  <h2>Weather Project</h2>
-                  <p class="mb-5">
-                    My first interactive application, I added GitHub, hosting
-                    and API integration to my developer toolbox. This app
-                    employs ES6, integrating a search engine, functions to
-                    extract data from the API and string interpolation to
-                    deliver a live, five day weather forecast.
-                    <br />
-                  </p>
-                </div>
+              <div class="project-description d-flex flex-column">
+                <h2>Weather Project</h2>
+                <p class="mb-4">
+                  My first interactive application, I added GitHub, hosting and
+                  API integration to my developer toolbox. This app employs ES6,
+                  integrating a search engine, functions to extract data from
+                  the API and string interpolation to deliver a live, five day
+                  weather forecast.
+                  <br />
+                </p>
                 <div>
                   <a
                     href="https://weather-app-ljf.netlify.app/"
@@ -97,18 +95,15 @@
                 class="project-image img-fluid"
                 alt="LJ Fryer Weather App"
               />
-              <div class="project-description">
-                <div>
-                  <h2>AI Poem Generator</h2>
-                  <p class="mb-5">
-                    This project gave me an introduction to AI prompt
-                    engineering. The mission was to build an interactive text
-                    generator using Axios and the SheCodes AI API. Including
-                    animations utilising JS plugin and CSS @keyframes rule, this
-                    app was a fun build.
-                    <br />
-                  </p>
-                </div>
+              <div class="project-description d-flex flex-column">
+                <h2>AI Poem Generator</h2>
+                <p class="mb-4">
+                  This project gave me an introduction to AI prompt engineering.
+                  The mission was to build an interactive text generator using
+                  Axios and the SheCodes AI API. Including animations utilising
+                  JS plugin and CSS @keyframes rule, this app was a fun build.
+                  <br />
+                </p>
                 <div>
                   <a
                     href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
@@ -128,7 +123,7 @@
                 class="project-image img-fluid"
                 alt="Pole dance project"
               />
-              <div class="project-description">
+              <div class="project-description d-flex flex-column">
                 <h2>Pole Dance Project</h2>
                 <p class="mb-5">
                   Using developer tool VS Code, I built a HTML landing page
