--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Italianno&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/style.css" />
@@ -27,12 +27,16 @@
       src="https://kit.fontawesome.com/552f79f5ce.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/src/index.js"></script>
   </head>
   <body class="mb-5">
     <div class="container">
       <a href="/" class="temp-link">Home</a>
       <a href="/about.html" class="temp-link">About Me</a>
-      <h1 class="text-center"><i class="fa-regular fa-file"></i> My Work</h1>
+      <a href="/contact.html" class="temp-link">Contact</a>
+      <h1 class="text-center mt-5">
+        <i class="fa-regular fa-file"></i> My Work
+      </h1>
       <h4 class="text-center p-2 mt-3 mb-3">Check out my projects</h4>
       <div>
         <div class="text-center mb-5">
@@ -266,6 +270,5 @@
         </div>
       </div>
     </div>
-    <script src="/src/index.js"></script>
   </body>
 </html>
