Added page content for contact.html

--- a/about.html
+++ b/about.html
@@ -31,10 +31,12 @@
   <body>
     <main class="mb-5">
       <div class="container">
-        <div class="about-me">
+        <header>
           <a href="/" class="temp-link">Home</a>
           <a href="/work.html" class="temp-link">My Work</a>
           <a href="/contact.html" class="temp-link">Contact</a>
+        </header>
+        <div class="about-me">
           <div class="about-me-inner d-flex">
             <img
               src="/images/trapeze-image.png"
