--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
   <body class="mb-5">
     <div class="container">
       <div class="hero">
-        <a href="/about.html" class="temp-link">About Me</a>
-        <a href="/work.html" class="temp-link">My Work</a>
-        <a href="/contact.html" class="temp-link">Contact</a>
+        <header>
+          <a href="/about.html" class="temp-link">About Me</a>
+          <a href="/work.html" class="temp-link">My Work</a>
+          <a href="/contact.html" class="temp-link">Contact</a>
+        </header>
         <div class="hero-inner d-flex">
           <div class="hero-text d-flex flex-column justify-content-center">
-            <div><h1 class="name-title">LJ FRYER</h1></div>
+            <h1 class="name-title">LJ FRYER</h1>
             <div class="hero-paragraph">
               <p>
                 An experienced teacher with a lifelong passion for STEM, I
