--- a/work.html
+++ b/work.html
@@ -31,9 +31,11 @@
   </head>
   <body class="mb-5">
     <div class="container">
-      <a href="/" class="temp-link">Home</a>
-      <a href="/about.html" class="temp-link">About Me</a>
-      <a href="/contact.html" class="temp-link">Contact</a>
+      <header>
+        <a href="/" class="temp-link">Home</a>
+        <a href="/about.html" class="temp-link">About Me</a>
+        <a href="/contact.html" class="temp-link">Contact</a>
+      </header>
       <h1 class="text-center mt-5">
         <i class="fa-regular fa-file"></i> My Work
       </h1>
