--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LJ Fryer</title>
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,8 +30,57 @@
   </head>
   <body class="mb-5">
     <div class="container">
+      <header>
+        <a href="/" class="temp-link">Home</a>
+        <a href="/about.html" class="temp-link">About Me</a>
+        <a href="/work.html" class="temp-link">My Work</a>
+      </header>
       <main>
-        <h1>Get in touch</h1>
+        <div class="contact-inner d-flex justify-content-center">
+          <div class="hello-box align-self-center" id="hello-box">
+            <p class="hello-text">hello</p>
+          </div>
+          <div class="contact-section d-flex flex-column align-self-center">
+            <h1 class="contact-heading text-center mt-5">Reach Out</h1>
+            <div class="personal-links">
+              <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
+                ><i class="fa-solid fa-envelope"></i
+              ></a>
+              <a href="#" title="Insta"
+                ><i class="fa-brands fa-square-instagram"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/linda-fryer-ba2294ba/"
+                title="My LinkedIn"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+            </div>
+            <div class="shecodes-link">
+              <a href="https://www.shecodes.io/graduates/128619-linda-fryer">
+                <img
+                  src="/logos/shecodes-logo-full.png"
+                  alt="SheCodes"
+                  class="img-fluid slide-logos"
+                />
+              </a>
+            </div>
+            <div class="coding-links">
+              <a href="https://github.com/" title="My GitHub"
+                ><img src="/logos/github-icon.svg" alt="" class="img-fluid slide-logos"></i
+              ></a>
+              <a
+                href="https://app.netlify.com/teams/lj-fryer/sites"
+                title="Netlify"
+              >
+                <img
+                  src="/logos/netlify-logo-lightmode.png"
+                  alt="My Netlify"
+                  class="img-fluid slide-logos"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
   </body>
