Styled basic layout for contact page

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
           <div class="hello-box align-self-center" id="hello-box">
             <p class="hello-text">hello</p>
           </div>
-          <div class="contact-section d-flex flex-column align-self-center">
+          <div class="contact-section d-flex flex-column text-center align-self-center">
             <h1 class="contact-heading text-center mt-5">Reach Out</h1>
-            <div class="personal-links">
+            <div class="personal-links d-flex justify-content-center">
               <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
                 ><i class="fa-solid fa-envelope"></i
               ></a>
@@ -55,16 +55,20 @@
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
             </div>
-            <div class="shecodes-link">
-              <a href="https://www.shecodes.io/graduates/128619-linda-fryer">
+            
+            <div class="text-center mt-5">
+                <h4>my code</h4>
+                <div class="text-center mb-2">
+                    <i class="fa-solid fa-chevron-down down-icon down-pointer"></i>
+                </div>
+                <div class="coding-links d-flex">
+              <a href="https://www.shecodes.io/graduates/128619-linda-fryer" title="SheCodes Profile">
                 <img
                   src="/logos/shecodes-logo-full.png"
                   alt="SheCodes"
                   class="img-fluid slide-logos"
                 />
               </a>
-            </div>
-            <div class="coding-links">
               <a href="https://github.com/" title="My GitHub"
                 ><img src="/logos/github-icon.svg" alt="" class="img-fluid slide-logos"></i
               ></a>
@@ -78,6 +82,7 @@
                   class="img-fluid slide-logos"
                 />
               </a>
+                </div>         
             </div>
           </div>
         </div>
