--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             <p class="hello-text">hello</p>
           </div>
           <div class="contact-section d-flex flex-column text-center align-self-center">
-            <h1 class="contact-heading text-center mt-5">Reach Out</h1>
+            <h1 class="contact-heading text-center mt-5">say hi</h1>
             <div class="personal-links d-flex justify-content-center">
               <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
                 ><i class="fa-solid fa-envelope"></i
