--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,11 @@
       </header>
       <main>
         <div class="contact-inner d-flex justify-content-center">
-          <div class="hello-box align-self-center" id="hello-box">
+          <div class="hello-box d-flex align-self-center" id="hello-box">
             <p class="hello-text">hello</p>
           </div>
           <div class="contact-section d-flex flex-column text-center align-self-center">
-            <h1 class="contact-heading text-center mt-5">say hi</h1>
+            <h1 class="contact-heading text-center">say hi</h1>
             <div class="personal-links d-flex justify-content-center">
               <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
                 ><i class="fa-solid fa-envelope"></i
@@ -61,7 +61,7 @@
                 <div class="text-center mb-2">
                     <i class="fa-solid fa-chevron-down down-icon down-pointer"></i>
                 </div>
-                <div class="coding-links d-flex">
+                <div class="coding-links d-flex mt-3">
               <a href="https://www.shecodes.io/graduates/128619-linda-fryer" title="SheCodes Profile">
                 <img
                   src="/logos/shecodes-logo-full.png"
