--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,53 @@
     <script src="/src/index.js"></script>
   </head>
   <body class="mb-5">
+    
     <div class="container">
       <header>
-        <a href="/" class="temp-link">Home</a>
-        <a href="/about.html" class="temp-link">About Me</a>
-        <a href="/work.html" class="temp-link">My Work</a>
+        <nav class="navbar navbar-expand-lg bg-primary-color">
+      <div class="container-fluid">
+        <a class="navbar-brand active text-light" href="/" title="lj fyer">lj fyer</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link text-light"
+                aria-current="page"
+                href="/"
+                title="home"
+                ><i class="fa-solid fa-house"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="/about.html" title="about me"
+                ><i class="fa-solid fa-circle-info"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="/work.html" title="my work"
+                ><i class="fa-solid fa-folder-open"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-light" href="/contact.html" title="say hi"
+                ><i class="fa-regular fa-comments"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
       </header>
       <main>
         <div class="contact-inner d-flex justify-content-center">
