Styled navbar and added logo

--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,15 @@
       <header>
         <nav class="navbar navbar-expand-lg bg-primary-color">
       <div class="container-fluid">
-        <a class="navbar-brand active text-light" href="/" title="lj fyer">lj fyer</a>
+        <a class="navbar-brand active text-light" href="/" title="lj fyer">
+          <img
+                  src="/logos/ljf-logo.png"
+                  alt="lj fryer"
+                  class="ljf-logo"
+                />
+        </a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler bg-light text-light"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -54,22 +60,22 @@
                 aria-current="page"
                 href="/"
                 title="home"
-                ><i class="fa-solid fa-house"></i
+                ><i class="fa-solid fa-house fs-5"></i
               ></a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-light" href="/about.html" title="about me"
-                ><i class="fa-solid fa-circle-info"></i
+                ><i class="fa-solid fa-circle-info fs-5"></i
               ></a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-light" href="/work.html" title="my work"
-                ><i class="fa-solid fa-folder-open"></i
+                ><i class="fa-solid fa-folder-open fs-5"></i
               ></a>
             </li>
             <li class="nav-item">
               <a class="nav-link active text-light" href="/contact.html" title="say hi"
-                ><i class="fa-regular fa-comments"></i
+                ><i class="fa-regular fa-comments fs-5"></i
               ></a>
             </li>
           </ul>
